--- a/template-ant-1/src/Home/static/footer.less
+++ b/template-ant-1/src/Home/static/footer.less
@@ -1,11 +1,12 @@
-@import './default.less';
+@import './default';
 
+@padding-space: 114px;
 
 footer.dark {
   background-color: #000;
   color: rgba(255, 255, 255, 0.65);
   a {
-    color: rgba(255, 255, 255, 0.9);
+    color: #fff;
   }
   h2 {
     color: rgba(255, 255, 255, 1);
@@ -22,7 +23,7 @@ footer.dark {
 footer {
   border-top: 1px solid @border-color;
   clear: both;
-  font-size: 14px;
+  font-size: 12px;
   background: #fff;
   position: relative;
   z-index: 100;
@@ -34,15 +35,10 @@ footer {
       display: inline-block;
       text-align: left;
       > h2 {
-        font-size: 16px;
+        font-size: 14px;
         margin: 0 auto 24px;
         font-weight: 500;
         position: relative;
-
-        > .title-icon {
-          width: 27px;
-          margin-right: 16px;
-        }
         > .anticon {
           font-size: 16px;
           position: absolute;
@@ -58,14 +54,14 @@ footer {
   }
   .footer-wrap {
     position: relative;
-    padding: 86px @padding-space 93px @padding-space;
+    padding: 86px @padding-space 70px @padding-space;
   }
   .bottom-bar {
     border-top: 1px solid @border-color;
     text-align: right;
-    padding: 16px @padding-space;
+    padding: 20px @padding-space;
     margin: 0;
-    line-height: 32px;
+    line-height: 24px;
     a {
       color: rgba(255, 255, 255, 0.65);
       &:hover {
@@ -74,6 +70,17 @@ footer {
     }
     .translate-button {
       text-align: left;
+      width: 200px;
+      margin: 0 auto;
     }
+  }
+  .footer-logo {
+    position: relative;
+    top: -2px;
+  }
+  .footer-flag {
+    position: relative;
+    top: -4px;
+    margin-right: 8px;
   }
 }
